--- a/template.html
+++ b/template.html
@@ -24,10 +24,14 @@
 	<main>
 		${ body }
     ${ if(toc) }
-    <br>
     <ul class="toc">
     ${ for(toc) }
-      <li><a href="${ toc.url }">${ toc.title }</a></li>
+      <li>
+        <a href="${ toc.url }">${ toc.title }</a>
+        ${ if(toc.description) }
+        <p>${ toc.description }</p>
+        ${ endif }
+      </li>
     ${ endfor }
     </ul>
     ${ endif }
