--- a/template.html
+++ b/template.html
@@ -20,7 +20,7 @@
 <body>
   <header>
     <nav class="container">
-      <h1 id="main-title"><a href="/">${ title-prefix }</a></h1>
+      <h1 id="title"><a href="/">${ title-prefix }</a></h1>
     </nav>
   </header>
   <main class="container">
